deploy/manifests/svc-grpcdemo.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpcdemo
  namespace: grpcdemo
spec:
  type: ClusterIP
  selector:
    app: grpcdemo
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
    appProtocol: HTTP2
