deploy/manifests/svc-play.yaml
apiVersion: v1
kind: Service
metadata:
  name: play
  namespace: play
spec:
  type: ClusterIP
  selector:
    app: play
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
    appProtocol: HTTP2
