deploy/manifests/gateway-grpcdemo.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: grpcdemo
  namespace: roster-sync
  annotations:
    networking.gke.io/certmap: districts-devadmin-ssl-map
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
  addresses:
  - type: NamedAddress
    value: districts-grpc
